all caption is done

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,7 +4,7 @@
                 <!-- Logo -->
                 <div class="flex-shrink-0">
                     <a href="index.html">
-                        <h1 class="text-xl sm:text-2xl font-bold text-gray-800">Tefa Peternakan Sapi Polije</h1>
+                        <h1 class="text-xl sm:text-2xl font-bold text-gray-800">TEFA Feedlot & Sapi Perah Polije</h1>
                     </a>
                 </div>
 
