--- a/components/footer.html
+++ b/components/footer.html
@@ -3,7 +3,7 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Column 1 -->
                 <div>
-                    <h4 class="text-xl font-bold mb-4 text-green-800">Peternakan Sapi Polije</h4>
+                    <h4 class="text-xl font-bold mb-4 text-green-800">TEFA Feedlot & Sapi Perah Polije</h4>
                     <p class="text-gray-600 mb-4">
                         Teaching Factory yang berkomitmen pada peternakan, pemberdayaan masyarakat, dan penyediaan
                         produk peternakan berkualitas.
