--- a/components/footer.html
+++ b/components/footer.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="border-t border-green-100 mt-8 pt-8 text-center text-gray-500">
-                <p>&copy; 2024 TEFA Peternakan Sapi Polije. All rights reserved.</p>
+                <p>&copy; 2025 TEFA Feedlot dan Sapi Perah Polije. All rights reserved.</p>
             </div>
         </div>
     </footer>
