--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,7 +4,10 @@
                 <!-- Logo -->
                 <div class="flex-shrink-0">
                     <a href="index.html">
-                        <h1 class="text-xl sm:text-2xl font-bold text-gray-800">TEFA Feedlot & Sapi Perah Polije</h1>
+                        <div class="leading-tight">
+                            <h1 class="text-sm sm:text-base md:text-lg lg:text-xl font-bold text-gray-800">TEFA FEEDLOT DAN SAPI PERAH</h1>
+                            <p class="text-xs sm:text-sm md:text-base text-gray-600">Politeknik Negeri Jember</p>
+                        </div>
                     </a>
                 </div>
 
